# Cherrypick

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  compose.yaml
.claude/: settings.json
apps/backend/: .env.example  Dockerfile  main.py  pyproject.toml
apps/backend/src/: config.py  database.py  health.py
apps/backend/src/models/: __init__.py  base.py  education.py  experience.py  job.py  project.py  skill.py  tailored_resume.py
apps/backend/src/routers/: builder.py  bullet_points.py  experiences.py  generate.py  jobs.py  projects.py  skills.py
apps/backend/src/schemas/: builder.py  bullet_point.py  education.py  experience.py  job.py  matchmaker.py  project.py  resume.py  skill.py  tailored_resume.py
apps/backend/src/services/: __init__.py  assembler.py  background_tasks.py  cherrypicker.py  embeddings.py  job_analyzer.py  matchmaker.py  normalizer.py  parser.py  pdf_generator.py  resync.py  skill_embeddings.py  skill_matcher.py
apps/backend/src/utils/: __init__.py  date_parser.py
apps/backend/templates/: master.typ
apps/frontend/: Dockerfile  package.json
